Replace JNI lib loading logic w/ plain loadLibrary

--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,8 @@
 				<pathelement location="build/classes-test"/>
 			</classpath>
 			
+			<sysproperty key="java.library.path" value="build/dist/"/>
+			
 			<formatter type="plain"/>
 
 			<batchtest todir="build/testresults">
