Use flags from config instead of JavaVM.framework

--- a/csrc/Makefile.osx
+++ b/csrc/Makefile.osx
@@ -9,7 +9,8 @@ libmapnik-jni.jnilib: $(SOURCE_DEPENDS)
 		$(JAVA_CFLAGS) \
 		mapnikjni.cpp \
 		$(LDFLAGS) \
-		$(MAPNIK_LIBS) -framework JavaVM
+		$(JAVA_LDFLAGS) \
+		$(MAPNIK_LIBS)
 	
 clean:
 	rm libmapnik-jni.jnilib
